Enable openjdk19+ to run
In the middle of re-working the implementation's detection of virtual
threads.  Virtual threads will NOT work with this patch, but at least
one is able to run with native threads.